# SDL_native_midi

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
include/SDL3_native_midi/: SDL_native_midi.h
src/: SDL_native_midi.h  SDL_native_midi_alsa.c  SDL_native_midi_common.c  SDL_native_midi_common.h  SDL_native_midi_haiku.cpp  SDL_native_midi_macos.c
test/: test_sdl_native_midi.c
